--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="stylesheet" href="styles.css">
   <title>Boiler Plate</title>
 </head>
 
