--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="favicon.png" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="/images/favicon.png" />
+  <link rel="stylesheet" href="/dist/styles.css">
   <title>Boiler Plate</title>
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="/bundle.js"></script>
+  <script src="/dist/bundle.js"></script>
 </body>
 
 </html>
