FireBase tutorial - code examples to CRUD / Subscribe

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/images/favicon.png" />
   <link rel="stylesheet" href="/dist/styles.css">
+  <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
   <title>Boiler Plate</title>
 </head>
 
